0.04
- Add missing example from doc.

0.03 (August 03, 2012)
- Fix bug in hash_array and callbacks.
- Improve doc.
- Rename variables in code to better names.

0.02 (August 03, 2012)
- Add hash_array() subroutine.
- Code optimalization.

0.01 (June 22, 2012)
- First version.