@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Config::Utils;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 is($Config::Utils::VERSION, 0.04, 'Version.');
